# onenote-utils

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
notebooks/: test_arxiv.ipynb
src/: README.md  elastic.py  notedownload.py  parsing.py
src/extract/: ocr.py  pdf.py
src/interface/: shell.py
src/kindle/: agent.py  notescrap.py
src/onenutil/: __main__.py  elastic.py
src/onenutil/extract/: embeddings.py  graph.py  ink.py  ocr.py  pdf.py  ranking.py
src/onenutil/interface/: search.py  shell.py  term.py  zotero_con.py
src/onenutil/schemas/: __init__.py  results.py
